Bug 1444541 - Don't stop recorder on pagehide during frameswap. r=smaug, a=jcristau

MozReview-Commit-ID: AZec0yXM1FI